--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
     <title>Rock Paper Scissors now with DOM</title>
 </head>
@@ -16,7 +16,7 @@
 <body>
     <div>
         <form action="submit">
-            <h2>Choose winning score:</h2>
+            <h2 id="toWin">Choose winning score:</h2>
             <input type="number" min="1" max="100" name="score" id="scoreToWin">
             <button type="submit" id="playGame">Play Game</button>
         </form>
@@ -38,6 +38,9 @@
         <h2>Score:</h2>
         <h2 id="currentScore">0 - 0</h2>
     </div>
+<div>
+    <button id="resetBtn">Reset</button>
+</div>
 
     <script src="game.js"></script>
 </body>
